--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "fs-extra": "^11.3.0",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "json2csv": "^6.0.0"
   },
   "keywords": [],
   "author": "",
